syntax = "proto3";

package calculator;
option go_package="./calculator/calculatorpb";

message Counting {
	int32 first_number =1;
	int32 second_number =2;
}

message CountRequest {
	Counting counting =1;
}

message CountResponse {
	string result =1;
}

service CountService {
	rpc Count(CountRequest) returns (CountResponse) {};
}